# MLS

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  r_requirements.R  requirements-api.txt  requirements-dev.txt  requirements-legacy.txt  requirements.txt  vercel.json
.claude/: launch.json
.interface-design/: system.md
api/: index.py
config/: __init__.py  settings.yaml  team_name_to_asa_id.yaml
dashboard/: app.py
data/: intelligence_events.parquet  intelligence_events_latest.json  match_prob_history.parquet  odds_history.parquet  parity_frame.meta.json  parity_frame.parquet  race_deltas_history.parquet  transfermarkt_squad_values_2017_mapped.csv  transfermarkt_squad_values_2018_mapped.csv  transfermarkt_squad_values_2019_mapped.csv  transfermarkt_squad_values_2020_mapped.csv  transfermarkt_squad_values_2021_mapped.csv  transfermarkt_squad_values_2022_mapped.csv  transfermarkt_squad_values_2023_mapped.csv  transfermarkt_squad_values_2024_mapped.csv  transfermarkt_squad_values_2025_mapped.csv  transfermarkt_squad_values_2026_mapped.csv  transfermarkt_squad_values_CDN1_2024_mapped.csv  transfermarkt_squad_values_CDN1_2026_mapped.csv  transfermarkt_squad_values_ES1_2026_mapped.csv  transfermarkt_squad_values_ES2_2024_mapped.csv  transfermarkt_squad_values_ES2_2026_mapped.csv  transfermarkt_squad_values_FR1_2024_mapped.csv  transfermarkt_squad_values_FR1_2026_mapped.csv  transfermarkt_squad_values_FR2_2024_mapped.csv  transfermarkt_squad_values_FR2_2026_mapped.csv  transfermarkt_squad_values_GB1_2026_mapped.csv  (+9 more)
data_pipeline/: __init__.py  (+27 more)
(+670 files in other folders)
